Add category images, order tracking, cabinet improvements
- Photo upload for products and categories with absolute paths
- Liquibase migration 016 for category image column
- Category thumbnail column in admin list (min 60x60)
- Catalog: remove quick-view eye / wishlist heart buttons
- Cart: add product image column
- Wishlist: 2-column grid layout
- Home page: About Us + OpenStreetMap (Куйбышевский район)
- Nav: language switcher removed, email hidden, Кабинет last, Заказы removed
- Sidebar: logout + order tracking added to cabinet
- Orders tracking page with visual status steps
- Checkout CSRF fix (th:action), AuthController RedirectAttributes
- Session tracking-modes=cookie, Thymeleaf cache disabled
- YooKassa mock payment flow verified working
- GlobalExceptionHandler logging
- Remove compare.html (unused)